# Multi-Paradigm-Programming-with-Modern-Cpp-daytime

./: .gitignore  CMakeLists.txt  README.md  Untitled-1.cpp  log.txt
daytime/: CMakeLists.txt
daytime/src/: main.cpp
daytime/src/daytime/src/: client.cpp
daytime/src/helpers/: scope_guard.h
src/: client.cpp  client.h  main.cpp  server.cpp  server.h
src/daytime/: CMakeLists.txt
src/daytime/daytime/: client.h  daytime_server.h  server.h
src/daytime/daytime/detail/: daytime_server_impl.h
src/daytime/src/: client.cpp  daytime_server.cpp  server.cpp
src/helpers/: CMakeLists.txt  logger.h
src/helpers/src/: logger.cpp
src/network/: CMakeLists.txt
src/network/network/: server.h  udp_server.h
src/network/network/detail/: udp_server_impl.h
src/network/src/: udp_server.cpp
